# BDM

./: .gitignore  2MNSAS实现方案.md  2MNSAS（模型变异及自然选择算法及仿真）核心问题修正与定位优化说明.md  BDM介绍.md  CHANGELOG.md  Cargo.toml  FILE_GUIDE.md  README.md  advanced_features.py  api_server.py  database.py  distiller.py  evolution.py  intent.py  main.py  memory.py  plan.md  pyproject.toml  retriever.py  safety.py  test_advanced_features.py  test_bdm_upgrade.py  tests.txt  tests2.txt
bdm_gui/: README.md  pubspec.yaml
bdm_gui/android/app/: build.gradle.kts
bdm_gui/android/app/src/main/: AndroidManifest.xml
bdm_gui/android/app/src/main/kotlin/com/example/bdm_gui/: MainActivity.kt
bdm_gui/ios/Runner/: Info.plist
bdm_gui/ios/Runner.xcodeproj/: project.pbxproj
bdm_gui/linux/: CMakeLists.txt
bdm_gui/linux/runner/: my_application.cc
bdm_gui/macos/Runner.xcodeproj/: project.pbxproj
bdm_gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
bdm_gui/macos/Runner/Configs/: AppInfo.xcconfig
bdm_gui/test/: widget_test.dart
bdm_gui/web/: index.html  manifest.json
bdm_gui/windows/: CMakeLists.txt
bdm_gui/windows/runner/: Runner.rc  main.cpp
src/: advanced.rs  lib.rs
