[package]
name = "bdm_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "bdm_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "chrono"] }
tiktoken-rs = "0.9.1"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
rand = "0.8"
